[tool.poetry]
name = "cognitive-leverage-engine"
version = "0.1.0"
description = "An engine to demonstrate AI leverage over traditional certainty-based tasks."
authors = ["Zhu Weijie <zhuweijie16@gmail.com>"]
readme = "README.md"
packages = [{include = "cle", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
